force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/Document_Package__c.object-meta.xml
<CustomObject>
    <description>Manages document packages and virtual folder structures for APD applications. Tracks document types, submission status, and virtual folder paths for organized document management.</description>
    <label>Document Package</label>
    <nameField>
        <displayFormat>DP-{000000000}</displayFormat>
        <label>Document Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Packages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>