force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>