force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/AI_Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Status__c</fullName>
    <label>AI Analysis Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>