force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/AI_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Score__c</fullName>
    <label>AI Confidence Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>