force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/AI_Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>AI_Processing_Error__c</fullName>
    <label>AI Processing Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>