force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/AI_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendations__c</fullName>
    <label>AI Recommendations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>