force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/APD_Application__c.field-meta.xml
<CustomField>
    <fullName>APD_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APD Application</label>
    <referenceTo>APD_Application__c</referenceTo>
    <relationshipLabel>Document Packages</relationshipLabel>
    <relationshipName>Document_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>