force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>Related ContentVersion Id</description>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>