force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Type of document within the permit package</description>
    <label>Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>