force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Signature_Date__c</fullName>
    <label>Signature Date</label>
    <type>DateTime</type>
</CustomField>