force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Signer_Role__c.field-meta.xml
<CustomField>
    <fullName>Signer_Role__c</fullName>
    <label>Signer Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>