force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>