force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>