force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Virtual_Folder_Path__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Folder_Path__c</fullName>
    <label>Virtual Folder Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>