force-app/main/Government_Documents/Permit_And_Licensing/objects/Document_Package__c/fields/Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Stage__c</fullName>
    <label>Workflow Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>